--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <div class="wrapper">
-    <img src=cCard component\images\image-product-desktop.jpg" alt="Perfume-desktop" width="50%">
+    <img src="card component\images\image-product-desktop.jpg" alt="Perfume-desktop" width="50%">
     <div>
       <h6>PERFUME</h6>
 
