--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <div class="wrapper">
-    <img src="card component\images\image-product-desktop.jpg" alt="Perfume-desktop" width="50%">
+    <img src="\images\image-product-desktop.jpg" alt="Perfume-desktop" width="50%">
     <div>
       <h6>PERFUME</h6>
 
@@ -36,7 +36,7 @@
         </tr>
       </table>
 
-      <p class="btn"> <img src="card component\images\icon-cart.svg" alt="cart" class="cart">Add to Cart</p>
+      <p class="btn"> <img src="\images\icon-cart.svg" alt="cart" class="cart">Add to Cart</p>
 
     </div>
 
